--- a/index.html
+++ b/index.html
@@ -555,7 +555,7 @@
                 <div class="coupon-confirm-content">
                     <p>· 活動贈品圖片僅供參考，實際商品以門市庫存提供為準，主辦單位保留更換等值商品或調整活動內容之權利，詳情請洽門市人員。</p>
                     <p>· 其他注意事項及未盡事宜，請詳使用說明。</p>
-                    <p style="color:#c0392b; font-weight:bold;">· 處於「已使用」狀態的卷類無法再次使用（因顧客誤按而變為「已使用」狀態的卷類也無法再次使用）。</p>
+                    <p style="color:#c0392b; font-weight:bold; font-size:1.15em;">· 處於「已使用」狀態的卷類無法再次使用（因顧客誤按而變為「已使用」狀態的卷類也無法再次使用）。</p>
                 </div>
                 <div class="confirm-buttons">
                     <button id="cancel-use-coupon-btn" class="btn btn-secondary">取消</button>
